--- a/react/src/css/Login.css
+++ b/react/src/css/Login.css
@@ -1,10 +1,15 @@
+/* body {
+  background-color: #9A616D;
+} */
+
+/* design 2 */
 body {
-    /* fallback for old browsers */
-    background: #6a11cb;
-  
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
-  
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
-  }
+  /* fallback for old browsers */
+  background: #6a11cb;
+
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(to right, rgb(235, 228, 21), rgb(39, 115, 246));
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, rgb(145, 236, 244), rgb(39, 115, 246))
+}
