--- a/react/src/index.css
+++ b/react/src/index.css
@@ -66,6 +66,6 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
-body {
+/* body {
   font-family: Roboto, Helvetica, Arial, sans-serif;
-}
+} */
